--- a/index.html
+++ b/index.html
@@ -27,26 +27,26 @@
 
 <br>
 <center>
-<a href="https://et-giffttsa.netlify.app/">
+<a href="etisalat.html">
 <img src="https://i.imgur.com/B5Ge1Jq.png" alt="تأكيد">
 </a>
 </center>
 	
 <center>
-<a href="https://we-gifts.netlify.app/">
+<a href="we.html">
 <img src="https://i.imgur.com/p4UQj7a.jpg" alt="تأكيد">
 </a>
 </center>
 	
 <br><br>
 <center>
-<a href="https://or-giifttsa.netlify.app/">
+<a href="orange.html">
 <img src="https://i.imgur.com/P5MmS0e.png" alt="تأكيد">
 </a>
 </center>
 <br><br>	
 <center>
-<a href="https://vf-gifftts.netlify.app/">
+<a href="vodafone.html">
 <img src="https://i.imgur.com/mpBohiU.png" alt="تأكيد">
 </a>
 </center>
