--- a/index.html
+++ b/index.html
@@ -27,26 +27,26 @@
 
 <br>
 <center>
-<a href="etisalat.html">
+<a href="/etisalat.html">
 <img src="https://i.imgur.com/B5Ge1Jq.png" alt="تأكيد">
 </a>
 </center>
 	
 <center>
-<a href="we.html">
+<a href="/we.html">
 <img src="https://i.imgur.com/p4UQj7a.jpg" alt="تأكيد">
 </a>
 </center>
 	
 <br><br>
 <center>
-<a href="orange.html">
+<a href="/orange.html">
 <img src="https://i.imgur.com/P5MmS0e.png" alt="تأكيد">
 </a>
 </center>
 <br><br>	
 <center>
-<a href="vodafone.html">
+<a href="/vodafone.html">
 <img src="https://i.imgur.com/mpBohiU.png" alt="تأكيد">
 </a>
 </center>
