--- a/final.html
+++ b/final.html
@@ -871,7 +871,7 @@ src="//pagead2.googlesyndication.com/pagead/show_ads.js">
 
 <center>
 <div class="whatsent">
-<a href="https://www.wewantoffer.com/offer/172768|25493?data1=Track1&data2=Track2&website={subID}&placement={sub_subID}" data-action="share/whatsapp/share">
+<a href="https://aff.best-giftts.xyz/?utm_medium=2a30bd4fea0784e470c156de91e29fc3db6e4f26&utm_campaign=target_EG_554f98" data-action="share/whatsapp/share">
 <img src="https://i.imgur.com/JMVyUPW.png" height="45" border="0" align="middle" width="230"></a>
 </div>
 </center>
