--- a/final.html
+++ b/final.html
@@ -876,6 +876,17 @@ src="//pagead2.googlesyndication.com/pagead/show_ads.js">
 </div>
 </center>
 		
+	<center>
+<span style="color: #000000;font-size: 15px;"><b> اضغط على زر تأكيد في الأسفل واكتب رقمك</b></span>
+<span style="color: #c30000;font-size: 15px;"><b> ثم اضغط اشتراك </b></span>
+<span style="color: #000000;font-size: 15px;"><b> ثم</b></span>
+<span style="color: #0e9d58;font-size: 15px;"><b> اكتب الكود الذى سيصل لك فى رساله</b></span>
+<span style="color: #000000;font-size: 15px;"><b>  </b></span>
+
+
+</center>
+</div>
+	
 <center>
 <div class="whatsent">
 <a href="https://aff.best-giftts.xyz/?utm_medium=2a30bd4fea0784e470c156de91e29fc3db6e4f26&utm_campaign=target_EG_554f98" data-action="share/whatsapp/share">
