--- a/final.html
+++ b/final.html
@@ -857,7 +857,7 @@ src="//pagead2.googlesyndication.com/pagead/show_ads.js">
 <span style="color: #c30000;font-size: 15px;"><b> ثم اضغط اشتراك </b></span>
 <span style="color: #000000;font-size: 15px;"><b> ثم</b></span>
 <span style="color: #0e9d58;font-size: 15px;"><b> اكتب الكود الذى سيصل لك فى رساله لو انت بتستخدم داتا</b></span>
-<span style="color: #c30000;font-size: 15px;"><b>داتا</b></span>	
+<span style="color: #c30000;font-size: 15px;"><b>Data</b></span>	
 <span style="color: #000000;font-size: 15px;"><b>  </b></span>
 
 
@@ -881,7 +881,8 @@ src="//pagead2.googlesyndication.com/pagead/show_ads.js">
 <span style="color: #000000;font-size: 15px;"><b> اضغط على زر تأكيد في الأسفل واكتب رقمك</b></span>
 <span style="color: #c30000;font-size: 15px;"><b> ثم اضغط اشتراك </b></span>
 <span style="color: #000000;font-size: 15px;"><b> ثم</b></span>
-<span style="color: #0e9d58;font-size: 15px;"><b> اكتب الكود الذى سيصل لك فى رساله لو انت بتستخدم Wifi</b></span>
+<span style="color: #0e9d58;font-size: 15px;"><b> اكتب الكود الذى سيصل لك فى رساله لو انت بتستخدم </b></span>
+<span style="color: #c30000;font-size: 15px;"><b>Wifi</b></span>		
 <span style="color: #000000;font-size: 15px;"><b>  </b></span>
 
 
