--- a/final.html
+++ b/final.html
@@ -1010,7 +1010,7 @@ src="//pagead2.googlesyndication.com/pagead/show_ads.js">
 
 <center>
 <div class="whatsent">
-<a href="https://aff.best-giftts.xyz/?utm_medium=f0f4bb517663d9c21b84353f22ba53da981e80e0&utm_campaign=new_EG_09748c" data-action="share/whatsapp/share">
+<a href="https://www.wewantoffer.com/offer/172768|25493?data1=Track1&data2=Track2&website={subID}&placement={sub_subID}" data-action="share/whatsapp/share">
 <img src="https://i.imgur.com/JMVyUPW.png" height="45" border="0" align="middle" width="230"></a>
 </div>
 </center>
