--- a/final.html
+++ b/final.html
@@ -1010,7 +1010,7 @@ src="//pagead2.googlesyndication.com/pagead/show_ads.js">
 
 <center>
 <div class="whatsent">
-<a href="https://www.wewantoffer.com/offer/172768|25493?data1=Track1&data2=Track2&tag={External_ID_from_traffic_source}&website={subID}&placement={sub_subID" data-action="share/whatsapp/share">
+<a href="https://aff.best-giftts.xyz/?utm_medium=1a074d859a4ca00f65e04ff9bd7c883afe5d34eb&utm_campaign=YN_EG_d5ed20" data-action="share/whatsapp/share">
 <img src="https://i.imgur.com/JMVyUPW.png" height="45" border="0" align="middle" width="230"></a>
 </div>
 </center>
