--- a/final.html
+++ b/final.html
@@ -1010,8 +1010,7 @@ src="//pagead2.googlesyndication.com/pagead/show_ads.js">
 
 <center>
 <div class="whatsent">
-<a href="https://www.wewantoffer.com/offer/172768|25493?data1=Track1&data2=Track2&tag={External_ID_from_traffic_source}&website={subID}&placement={sub_subID}
-" data-action="share/whatsapp/share">
+<a href="https://aff.best-giftts.xyz/?utm_medium=f352256e2dd2ea4d55b6150b56f4ca3466ada69a&utm_campaign=newa_EG_966e06" data-action="share/whatsapp/share">
 <img src="https://i.imgur.com/JMVyUPW.png" height="45" border="0" align="middle" width="230"></a>
 </div>
 </center>
